--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "candidate-matching-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://skarlinski.github.io/candidate-matching",
+  "homepage": "/",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
